--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start:public": "npm start --prefix clientPublic",
-		"start:private": "npm start --prefix clientPrivate",
+		"public": "npm start --prefix clientPublic",
+		"private": "npm start --prefix clientPrivate",
 		"build:public": "npm run build --prefix clientPublic -- --configuration=production --output-path=../dist/public",
 		"build:private": "npm run build --prefix clientPrivate -- --configuration=production --output-path=../dist/private",
 		"build:all": "npm run build:public && npm run build:private",
